# aurelius-atlas-documentation

./: .cspell.json  .markdownlint.json  .mdformat.toml  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html
.cspell/: custom-words.txt
.devcontainer/: devcontainer.json  postcreate.sh
.github/workflows/: ci.yml
about-us/: index.html
architecture/: index.html
benefits-and-features/: index.html
data-quality/: index.html
docs/: about-us.md  architecture.md  benefits-and-features.md  data-quality.md  faq.md  index.md  installation-and-deployment.md  integrations.md  onboard-datasources.md  support-and-maintenance.md  support.md  user-stories.md
docs/stylesheets/: icons.css  tabs.css
docs/support-and-maintenance/: index.md
docs/user-stories/: cross-platform-data-governance.md  data-discovery.md  data-governance-quality.md  data-lineage.md  data-quality-management.md  index.md
faq/: index.html
getting-started/: index.html
installation-and-deployment/: index.html
integrations/: index.html
onboard-datasources/: index.html
search/: search_index.json
stylesheets/: tabs.css
support/: index.html
support-and-maintenance/: index.html
user-guide/: index.html
user-stories/: index.html
user-stories/cross-platform-data-governance/: index.html
user-stories/data-discovery/: index.html
user-stories/data-governance-quality/: index.html
user-stories/data-lineage/: index.html
user-stories/data-quality-management/: index.html
