[tool.poetry]
name = "aurelius-atlas-documentation"
version = "0.1.0"
description = ""
authors = ["Aurelius Enterprise <info@aureliusenterprise.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
mkdocs = "~1.6"
pymdown-extensions = "~10.8"
mkdocs-mermaid2-plugin = "^1.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "~3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
